--- a/.github/workflows/backfill.yml
+++ b/.github/workflows/backfill.yml
@@ -14,6 +14,8 @@ jobs:
       NEON_DSN: ${{ secrets.NEON_DSN }}
       OANDA_API_TOKEN: ${{ secrets.OANDA_API_TOKEN }}
       OANDA_ENV: ${{ secrets.OANDA_ENV }}
+      MAINT_DAYS: "3"
+
 
       # backfill controls (safe to hardcode)
       BACKFILL_DAYS_PER_RUN: "30"
