--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 ﻿oandapyV20
 pandas
-psycopg2-binary
+psycopg2-binary==2.9.11
 python-dateutil
 pytz
 requests
-psycopg[binary]==3.2.1
 requests==2.32.3
