Fix typo in NOTION_TOKEN environment variable and update documentation; add required env var check in notion_sync.py

--- a/.github/workflows/notion_sync.yml
+++ b/.github/workflows/notion_sync.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run Notion sync
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+          NOTIOM_TOKEN: ${{ secrets.NOTIOM_TOKEN }}
           NOTION_BLOCKS_DB_ID: ${{ secrets.NOTION_BLOCKS_DB_ID }}
           NOTION_OUTCOMES_DB_ID: ${{ secrets.NOTION_OUTCOMES_DB_ID }}
           NOTION_RUNS_DB_ID: ${{ secrets.NOTION_RUNS_DB_ID }}
