Path1: add contents:write permission for branch push

--- a/.github/workflows/path1_evidence_queue.yml
+++ b/.github/workflows/path1_evidence_queue.yml
@@ -40,6 +40,10 @@ on:
           - 'false'
           - 'true'
 
+# Required permissions for pushing branches
+permissions:
+  contents: write
+
 jobs:
   run-evidence-queue:
     runs-on: ubuntu-latest
