Enhance evidence run scripts: add warnings for local queue status and validation scope

--- a/.github/workflows/path1_evidence_queue.yml
+++ b/.github/workflows/path1_evidence_queue.yml
@@ -290,6 +290,9 @@ jobs:
           git checkout -b "$BRANCH"
           
           # Stage generated files
+          # IMPORTANT: RUN_QUEUE.csv is intentionally NOT committed.
+          # Queue status updates are LOCAL ONLY and will be lost after workflow.
+          # INDEX.md is the canonical execution ledger, not the queue.
           git add sql/path1/evidence/runs/
           git add reports/path1/evidence/runs/
           git add reports/path1/evidence/INDEX.md
