Path1: add Evidence Pack v0.2 + run p1_20260120_031 outputs; add backfill_m15 workflow; ignore pytest temp dirs

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ coverage.xml
 *.py.cover
 .hypothesis/
 .pytest_cache/
+.pytest-tmp/
 cover/
 
 # Translations
@@ -241,3 +242,9 @@ reports/validation/*
 # Exception: canonical verification evidence (tracked)
 !reports/verification/
 !reports/verification/**/*
+
+# pytest temp / cache
+.pytest_cache/
+.pytest-tmp/
+.pytest-tmp2/
+
