--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     env:
       PYTHONUTF8: "1"
       # Required: DB URL used by your scripts (name it to match your code)
-      OVC_DB_URL: ${{ secrets.OVC_DB_URL }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Checkout
