feat: Introduce Path1 Sealing Protocol and Replay Verification
- Added Path1 Sealing Protocol v0.1 documentation for deterministic integrity seals.
- Implemented Path1 Replay Verification tool for structural validation of run artifacts.
- Created helper functions for parsing and validating run metadata.
- Developed CLI scripts for sealing manifests and verifying runs, including strict mode for error handling.
- Added tests for replay verification and run metadata parsing to ensure functionality and correctness.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
   "python.analysis.diagnosticMode": "workspace",
 
   // --- Terminal consistency ---
-  "terminal.integrated.defaultProfile.windows": "PowerShell"
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "python.testing.pytestArgs": [
+    "."
+  ]
 }
