feat: add initial implementation of trajectory families module
- Introduced trajectory_families package with core functionality for computing DayFingerprint v0.1 from trajectory data.
- Implemented fingerprint computation, including methods for loading parameters, processing trajectory data, and calculating various metrics.
- Added schema validation for fingerprint data to ensure compliance with defined standards.
- Created parameter configuration file (params_v0_1.json) for fingerprint settings.
- Established core functions for computing quadrants, transitions, entropy, and other metrics related to trajectory analysis.
- Included utility functions for loading and writing fingerprint data in JSON format.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
 
   // --- Terminal consistency ---
   "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "terminal.integrated.cwd": "C:\\Users\\Owner\\projects\\ovc-infra",
   "python.testing.pytestArgs": [
     "."
   ]
